--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'DeterminationJP';
 	src: url(/font/DeterminationJP.ttf) format('truetype'),
-		 url(font/determinationjp-webfont.woff) format('woff');
+		 url(font/DeterminationJP.woff) format('woff');
 }
-img {
+#save{
 	width:40%;
 	height:40%;
 }
@@ -16,18 +16,15 @@ img {
 	height:75vh;
 	position:relative;
 	align:center;
-	 border: 1px solid #aaa;
 	 
 }
 
 #displaybox{
-	font-family: DeterminationJP; 
 	background-color: rgb(0,0,0,0);
-	font-size: 50px;
-		width:90vw;
-		height:30vh;
+	width:90vw;
+	height:30vh;
 	margin: 0 auto; 
-	    top: 0;
+	top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -36,4 +33,23 @@ img {
 	position:absolute;
 	bottom:0;
 	padding:25px;
+}
+#charsarea{
+	margin:0;
+	font-size: 50px;
+	font-family: DeterminationJP; 
+	font-weight: 20px;
+}
+
+#heart{
+width:50px;
+}
+
+#saveline{
+	display: -webkit-flex;
+ display: flex;
+ -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
+ align-items: center; /* 縦方向中央揃え */
+ -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
+ justify-content: center; /* 横方向中央揃え */
 }
